Mon Apr 15 08:49:23 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/Makefile.bor:
        * examples/Timer_Queue/Makefile.bor:
        * exmaples/Timer_Queue/Async_Timer_Queue_Test.bor:
        * examples/Timer_Queue/Reactor_Timer_Queue_Test.bor:
        * examples/Timer_Queue/Thread_Timer_Queue_Test.bor:
          Added BCB makefiles

        * examples/Timer_Queue/main_async.cpp:
        * examples/Timer_Queue/main_reactor.cpp:
        * examples/Timer_Queue/main_thread.cpp:
          Made the example compiling in an unicode build

Mon Apr 15 07:39:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/CPP-unclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/FD-unclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/FD-unserver.cpp:
          Added include of OS.h to get ACE_TMAIN macro

        * apps/JAWS/server/HTTP_Server.h:
	  Added include of svc_export.h.

Sun Apr 14 20:33:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.h:
        * ace/Process.h:
          Doxygen-ized some of the comments

Sun Apr 14 19:25:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Future.h:
          Fixed small typing errors in comments

Sun Apr 14 17:56:33 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SOCK_Dgram_Bcast.h:
        * ace/SV_Message.h:
        * ace/SV_Message_Queue.h:
          Doxygen-ized some of the comments

Sun Apr 14 11:59:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/SPIPE_Addr.h:
        * ace/Filecache.h:
        * ace/Time_Request_Reply.h:
        * ace/TLI.h:
          Doxygen-ized some of the comments

Sat Apr 13 19:28:40 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/Basic_Types.h:  Added include of pthread.h to pick
	  up typedef of pthread_key_t.

Sat Apr 13 17:16:10 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* examples/Service_Configurator/IPC-tests/server/Handle_L_SPIPE.h: